[gd_scene load_steps=43 format=3 uid="uid://bcf6q86fpumhy"]

[ext_resource type="Script" path="res://Redguy/Redguy_old.gd" id="1_i201s"]
[ext_resource type="Texture2D" uid="uid://cqwdhg1o3cg8y" path="res://Assets/Enemies/Redguy/Death/0.png" id="2_xrlnw"]
[ext_resource type="Texture2D" uid="uid://cfykydg8aeuap" path="res://Assets/Enemies/Redguy/Death/1.png" id="3_mwgxb"]
[ext_resource type="Texture2D" uid="uid://b1ijnn0iiuwak" path="res://Assets/Enemies/Redguy/Death/2.png" id="4_h5dbs"]
[ext_resource type="Texture2D" uid="uid://d0ndh857qvcv7" path="res://Assets/Enemies/Redguy/Death/3.png" id="5_wxb3w"]
[ext_resource type="Texture2D" uid="uid://dm5p8twyy2m01" path="res://Assets/Enemies/Redguy/Death/4.png" id="6_ftatx"]
[ext_resource type="Texture2D" uid="uid://bstajbtcjiqc" path="res://Assets/Enemies/Redguy/Death/5.png" id="7_7y1t5"]
[ext_resource type="Texture2D" uid="uid://cxpjfenjh2uw7" path="res://Assets/Enemies/Redguy/Death/stars_die_1.png" id="8_yksy1"]
[ext_resource type="Texture2D" uid="uid://cjcrcr5h0882n" path="res://Assets/Enemies/Redguy/Death/stars_die_2.png" id="9_c5o1j"]
[ext_resource type="Texture2D" uid="uid://dw8ncflocb56w" path="res://Assets/Enemies/Redguy/Death/stars_die_3.png" id="10_nxfcj"]
[ext_resource type="Texture2D" uid="uid://hfscd6bly3xf" path="res://Assets/Enemies/Redguy/Idle/Redguy7.png" id="11_iw2ay"]
[ext_resource type="Texture2D" uid="uid://cbligqj8kvb45" path="res://Assets/Enemies/Redguy/Idle/Redguy3.png" id="12_lni3d"]
[ext_resource type="Texture2D" uid="uid://xfv2ijftvgaq" path="res://Assets/Enemies/Redguy/Idle/Redguy7f.png" id="13_nq3j1"]
[ext_resource type="Texture2D" uid="uid://ooywqb5qnr2y" path="res://Assets/Enemies/Redguy/Idle/Redguy3f.png" id="14_g7vyu"]
[ext_resource type="Texture2D" uid="uid://jf875rmdxu4k" path="res://Assets/Enemies/Redguy/Walking/Redguy1.png" id="15_ycrt0"]
[ext_resource type="Texture2D" uid="uid://braudsec7wbjs" path="res://Assets/Enemies/Redguy/Walking/Redguy2.png" id="16_b5653"]
[ext_resource type="Texture2D" uid="uid://byid018qb8h81" path="res://Assets/Enemies/Redguy/Walking/Redguy3.png" id="17_tcb5w"]
[ext_resource type="Texture2D" uid="uid://cai3yhgbsek3l" path="res://Assets/Enemies/Redguy/Walking/Redguy4.png" id="18_2bm2v"]
[ext_resource type="Texture2D" uid="uid://di4efcqpgh05j" path="res://Assets/Enemies/Redguy/Walking/Redguy5.png" id="19_fwch5"]
[ext_resource type="Texture2D" uid="uid://dovcdxy3ph14u" path="res://Assets/Enemies/Redguy/Walking/Redguy6.png" id="20_lqh75"]
[ext_resource type="Texture2D" uid="uid://brljmxt1wt0mw" path="res://Assets/Enemies/Redguy/Walking/Redguy7.png" id="21_swchm"]
[ext_resource type="Texture2D" uid="uid://dc3vj3mxfepup" path="res://Assets/Enemies/Redguy/Walking/Redguy8.png" id="22_lwvpn"]
[ext_resource type="Texture2D" uid="uid://dn0p7j5h58cd3" path="res://Assets/Enemies/Redguy/Walking/Redguy9.png" id="23_m2tk8"]
[ext_resource type="Texture2D" uid="uid://boqkrdxd0slmy" path="res://Assets/Enemies/Redguy/Walking/Redguy10.png" id="24_6fwu6"]
[ext_resource type="Texture2D" uid="uid://cf2mpihhrrh16" path="res://Assets/Enemies/Redguy/Walking/Redguy11.png" id="25_5y3u1"]
[ext_resource type="Texture2D" uid="uid://dj3samh1lw57l" path="res://Assets/Enemies/Redguy/Walking/Redguy12.png" id="26_s6e6l"]
[ext_resource type="Texture2D" uid="uid://dngdbn5epnqjq" path="res://Assets/Enemies/Redguy/Walking/Redguy13.png" id="27_iyvu4"]
[ext_resource type="Texture2D" uid="uid://bouti400ewtee" path="res://Assets/Enemies/Redguy/Walking/Redguy14.png" id="28_mw0lx"]
[ext_resource type="Texture2D" uid="uid://dnfjf7bte5u4s" path="res://Assets/Enemies/Redguy/Walking/Redguy15.png" id="29_628gn"]
[ext_resource type="Texture2D" uid="uid://bggjccbmyp810" path="res://Assets/Enemies/Redguy/Walking/Redguy16.png" id="30_pas1p"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wo5yj"]
size = Vector2(32, 46.25)

[sub_resource type="SpriteFrames" id="SpriteFrames_4fegu"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_xrlnw")
}, {
"duration": 1.0,
"texture": ExtResource("3_mwgxb")
}, {
"duration": 1.0,
"texture": ExtResource("4_h5dbs")
}, {
"duration": 1.0,
"texture": ExtResource("5_wxb3w")
}, {
"duration": 1.0,
"texture": ExtResource("6_ftatx")
}, {
"duration": 1.5,
"texture": ExtResource("7_7y1t5")
}, {
"duration": 0.4,
"texture": ExtResource("8_yksy1")
}, {
"duration": 0.4,
"texture": ExtResource("9_c5o1j")
}, {
"duration": 0.4,
"texture": ExtResource("10_nxfcj")
}],
"loop": false,
"name": &"Death",
"speed": 10.0
}, {
"frames": [{
"duration": 2.0,
"texture": ExtResource("11_iw2ay")
}, {
"duration": 1.0,
"texture": ExtResource("12_lni3d")
}, {
"duration": 2.0,
"texture": ExtResource("13_nq3j1")
}, {
"duration": 1.0,
"texture": ExtResource("14_g7vyu")
}],
"loop": true,
"name": &"Idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("15_ycrt0")
}, {
"duration": 1.0,
"texture": ExtResource("16_b5653")
}, {
"duration": 1.0,
"texture": ExtResource("17_tcb5w")
}, {
"duration": 1.0,
"texture": ExtResource("18_2bm2v")
}, {
"duration": 1.0,
"texture": ExtResource("19_fwch5")
}, {
"duration": 1.0,
"texture": ExtResource("20_lqh75")
}, {
"duration": 1.0,
"texture": ExtResource("21_swchm")
}, {
"duration": 1.0,
"texture": ExtResource("22_lwvpn")
}, {
"duration": 1.0,
"texture": ExtResource("23_m2tk8")
}, {
"duration": 1.0,
"texture": ExtResource("24_6fwu6")
}, {
"duration": 1.0,
"texture": ExtResource("25_5y3u1")
}, {
"duration": 1.0,
"texture": ExtResource("26_s6e6l")
}, {
"duration": 1.0,
"texture": ExtResource("27_iyvu4")
}, {
"duration": 1.0,
"texture": ExtResource("28_mw0lx")
}, {
"duration": 1.0,
"texture": ExtResource("29_628gn")
}, {
"duration": 1.0,
"texture": ExtResource("30_pas1p")
}],
"loop": true,
"name": &"Walking",
"speed": 30.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_31wfx"]
radius = 165.027

[sub_resource type="RectangleShape2D" id="RectangleShape2D_w7qse"]
size = Vector2(37, 39)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qrhp5"]
size = Vector2(28, 53)

[sub_resource type="Animation" id="Animation_skcbv"]
resource_name = "Death"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"Death"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8]
}

[sub_resource type="Animation" id="Animation_q0yev"]
resource_name = "Idle"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"Idle"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="Animation" id="Animation_qmrjk"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}

[sub_resource type="Animation" id="Animation_5bivk"]
resource_name = "Walking"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"Walking"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 15]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_0fmng"]
_data = {
"Death": SubResource("Animation_skcbv"),
"Idle": SubResource("Animation_q0yev"),
"RESET": SubResource("Animation_qmrjk"),
"Walking": SubResource("Animation_5bivk")
}

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_fu26w"]

[sub_resource type="AnimationNodeStateMachinePlayback" id="AnimationNodeStateMachinePlayback_0ac2v"]

[node name="Redguy_old" type="CharacterBody2D"]
script = ExtResource("1_i201s")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource("RectangleShape2D_wo5yj")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -3)
scale = Vector2(1.4, 1.4)
sprite_frames = SubResource("SpriteFrames_4fegu")
animation = &"Death"
frame = 1

[node name="PlayerDetection" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetection"]
shape = SubResource("CircleShape2D_31wfx")

[node name="PlayerCollision" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerCollision"]
position = Vector2(-0.5, 1.5)
shape = SubResource("RectangleShape2D_w7qse")

[node name="PlayerDeath" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDeath"]
position = Vector2(0, -1.5)
shape = SubResource("RectangleShape2D_qrhp5")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Idle"
libraries = {
"": SubResource("AnimationLibrary_0fmng")
}

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource("AnimationNodeStateMachine_fu26w")
anim_player = NodePath("../AnimationPlayer")
parameters/playback = SubResource("AnimationNodeStateMachinePlayback_0ac2v")

[connection signal="body_entered" from="PlayerDetection" to="." method="_on_player_detection_body_entered"]
[connection signal="body_exited" from="PlayerDetection" to="." method="_on_player_detection_body_exited"]
[connection signal="body_entered" from="PlayerCollision" to="." method="_on_player_collision_body_entered"]
[connection signal="body_entered" from="PlayerDeath" to="." method="_on_player_death_body_entered"]
